# caspwn

./: .gitignore  README.md  kill_cache.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
analysis/PS1-Water-Silica1/: compute_energy.py  compute_force.py  force.py  run.sh  run_force.sh
analysis/Tzero/: compute_energy.py  plot.py
analysis/lowT/: compute.py
analysis/scattering-amplitude/: chi.py  plot.py  (+1 more)
caspwn/: __init__.py
docs/: Makefile
functional_tests/: compare_results.py  create_referece_data.sh  create_test_data.sh
material/: PTFE.py  aluminium.py  ethanol.py  gold_drude.py  gold_plasma.py  material.py  methane_molecule.py  pdoped_Si.py  plot.py  sodalime.py  vacuum.py
materials/: PR.py  material.py  water_zwol.py
notes/: notes.tex
plane/: fresnel.py  reflection_coefficients.py  two_layers.py
plane-plane/: energy.py
plane-sphere/: PFA.py  compute.py  compute_plsp.py  energy.py  index.py  kernel.py  plsp_finite_frequency.py  plsp_interaction.py  plsp_zero_frequency.py
plane_sphere/: compute_plsp.py  plsp_interaction.py
sphere/: angular.py  kernel.py  kernels.py  mie.py  reflection_matrix.py  scattering_amplitude.py  scattering_amplitudes.py
sphere-plane/: energy.py  kernel.py
sphere-sphere/: PFA.py  compute.py  compute_spsp.py  energy.py  force.py  index.py  kernel.py  spsp_interaction.py
sphere_sphere/: compute_spsp.py  spsp_interaction.py
tests/: conftest.py
ufuncs/: ABCD.py  bessel.py  integrate.py  integration.py  legendre.py  psd.py  summation.py
ufuncs-sphere/: ABCD.py  angular.py  mie.py  scattering_amplitude.py
(+166 files in other folders)
