[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools == 69.5.1',
    'numpy == 1.26.4',
    'scipy == 1.13.0',
    'numba == 0.59.1',
]

[project]
name = 'caspwn'
authors = [
    {name = 'Benjamin Spreng', email = 'sprengjamin@gmail.com'},
]
readme = 'README.md'
requires-python = '>=3.11'
classifiers = ['License :: OSI Approved :: GNU General Public License v3 (GPLv3)']
dynamic = ['version', 'description', 'license', 'dependencies']

[tool.setuptools.dynamic]
dependencies = { file = ['requirements.txt'] }